crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_not_match_suggests_negated_regex.txt
Q = #not-match?
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:5
  |
1 | Q = #not-match?
  |     ^^^^^^^^^^^
  |
help: use `(node !~ /re/)`
